--- a/fdcp-3-making_websites_interactive/fdcp-3a-/index_1.html
+++ b/fdcp-3-making_websites_interactive/fdcp-3a-/index_1.html
@@ -4,7 +4,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-     <header id="myHeader">
+     <header>
          <h1>I'm learning HTML and CSS</h1>
      </header>
      
