intro to the dom

--- a/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_5.html
+++ b/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_5.html
@@ -8,6 +8,6 @@
             <li class="thing">Bright copper kettles</li>
             <li class="thing">Warm woollen mittens</li>
         </ol>
-        <script src="index.pack.js"></script>
+        <script src="index_5.js"></script>
     </body>
 </html>
