--- a/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_6.html
+++ b/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_6.html
@@ -2,8 +2,8 @@
     <head>
     </head>
     <body>
-        <h1>Here is some text</h1>
-        <p>PLACEHOLDER</p>
+        <h1 id="header">Here is some text</h1>
+        <p id="paragraph">PLACEHOLDER</p>
         
         <script src="index.js"></script>
     </body>
