intro to the dom

--- a/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_9.html
+++ b/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_9.html
@@ -3,8 +3,8 @@
         <link href="styles.css" rel="stylesheet"/>
     </head>
     <body>
-        <input type="text" id="text-input"/>
+        <input type="text" id="text-input" value="This is some content"/>
         
-        <script src="index.js"></script>
+        <script src="index_9.js"></script>
     </body>
 </html>
