--- a/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_11.html
+++ b/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_11.html
@@ -8,6 +8,6 @@
             <li>2</li>
         </ul>
         
-        <script src="index.js"></script>
+        <script src="index_11.js"></script>
     </body>
 </html>
