--- a/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_13.html
+++ b/fdcp-3-making_websites_interactive/fdcp-3c-intro-to-the-dom/index_13.html
@@ -1,9 +1,10 @@
 <html>
     <head>
+        <link href="styles.css" rel="stylesheet"/>
     </head>
     <body>
-        <ul id="rangers"></ul>
-        
-        <script src="index_12.js"></script>
+        <button id="button">Click me</button>
+        <h1 id="header">Press here!</h1>
+        <script src="index_13.js"></script>
     </body>
 </html>
