--- a/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.html
+++ b/fdcp-3-making_websites_interactive/fdcp-3d-buikd-a-diary-app/index.html
@@ -15,7 +15,9 @@
             <button type="submit" class="button">Submit</button>
         </form>
 
-        <section id="entries"></section>
+        <section id="entries">
+            <div class="entries-nav"></div>
+        </section>
         <script src="index.js"></script>
     </body>
 </html>
