--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/index_11.html
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/index_11.html
@@ -9,7 +9,7 @@
         
         <div class="blog-post">
             <h2>An awesome blog post</h2>
-            <img src="windows_11.jpg" alt="a bright yellow window on a blue wall">
+            <img src="window_11.png" alt="a bright yellow window on a blue wall">
             <p>At vero eos et <a href="#">accusam et justo duo</a> dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Netus et malesuada fames ac. <a href="#">Sed cras ornare</a> arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
             <p class="read-more"><a href="#">Read more...</a></p>
