--- a/Pages/fcc-tribute/index.html
+++ b/Pages/fcc-tribute/index.html
@@ -7,10 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        
-    </header>
+    <div id="main">
+        <header>
+            <div class="hero">
+                <h1 id="title">Commissaire Maigret</h1>
+                <p></p>
+            </div>
+        </header>
+    
+        <main>
 
+            <div id="img-div">
+                <img src="maigret-cremer.png" alt="Bruno Cremer, le dernier commissaire Maigret" id="image">
+                <caption id="img-caption"></caption>
+            </div>
 
+            <section id="tribute-info">
+
+            </section>
+
+            <a href="#" id="tribute-link" target="_blank"></a>
+        </main>
+
+    </div>
 </body>
 </html>
