--- a/Pages/fcc-tribute/index.html
+++ b/Pages/fcc-tribute/index.html
@@ -11,127 +11,130 @@
         <header>
             <div class="hero">
                 <h1 id="title">Jules Maigret</h1>
-                <p>Le commissaire français le plus connu au monde.</p>
+                <p>Le plus célèbre des policiers français.</p>
             </div>
         </header>
     
         <main>
 
             <div id="img-div">
-                <img src="maigret-cremer.png" alt="Bruno Cremer, le dernier commissaire Maigret" id="image">
-                <caption id="img-caption"></caption>
+                <img src="simenon.jpg" alt="Bruno Cremer, le dernier commissaire Maigret" id="image">
+                <caption id="img-caption"><p class="caption">Georges Simenon, l'auteur de ses aventures</p></caption>   
             </div>
 
-            <section id="tribute-info">
+            
+
+
+            <section id="tribute-info" class="list">
                 <h2>Ses enquêtes</h2>
                 <ul>
                     <li>Pietr-le-Letton (mai 1931)</li>
-<li>Le Charretier de la Providence (mars 1931)</li>
-<li>Monsieur Gallet, décédé (février 1931)</li>
-<li>Le Pendu de Saint-Pholien (février 1931)</li>
-<li>La Tête d'un homme (septembre 1931)</li>
-<li>Le Chien jaune (avril 1931)</li>
-<li>La Nuit du carrefour (juin 1931)</li>
-<li>Un crime en Hollande (juillet 1931)</li>
-<li>Au rendez-vous des Terre-Neuvas (août 1931)</li>
-<li>La Danseuse du Gai-Moulin (novembre 1931)</li>
-<li>La Guinguette à deux sous (décembre 1931)</li>
-<li>Le Port des brumes (mai 1932)</li>
-<li>L'Ombre chinoise (janvier 1932)</li>
-<li>L'Affaire Saint-Fiacre (février 1932)</li>
-<li>Chez les Flamands (mars 1932)</li>
-<li>Le Fou de Bergerac (avril 1932)</li>
-<li>Liberty Bar (juillet 1932)</li>
-<li>L'Écluse no 1 (juin 1933)</li>
-<li>Maigret (mars 1934)</li>
-<li>Les Nouvelles Enquêtes de Maigret (mars 1944), recueil de nouvelles :</li>
-<li>La Péniche aux deux pendus (31 octobre et 7 novembre 1936)</li>
-<li>L'Affaire du Boulevard Beaumarchais (24 et 31 octobre 1936)</li>
-<li>La Fenêtre ouverte (7 et 14 novembre 1936)</li>
-<li>Monsieur Lundi (20 décembre 1936)</li>
-<li>Jeumont, 51 minutes d'arrêt (non prépubliée)</li>
-<li>Peine de mort (14 novembre 1936)</li>
-<li>Les Larmes de bougie (22 novembre 1936)</li>
-<li>Rue Pigalle (29 novembre et 6 décembre 1936)</li>
-<li>Une erreur de Maigret (3 janvier 1937)</li>
-<li>L'Amoureux de Madame Maigret (28 juillet 1939)</li>
-<li>La Vieille Dame de Bayeux (3 février 1939)</li>
-<li>L'Auberge aux noyés (11 novembre 1938)</li>
-<li>Stan le tueur (23 décembre 1938)</li>
-<li>L'Étoile du Nord (30 septembre 1938)</li>
-<li>Tempête sur la Manche (20 mai 1938)</li>
-<li>Mademoiselle Berthe et son amant (29 avril 1938)</li>
-<li>Le Notaire de Châteauneuf (17 juin 1938)</li>
-<li>L'Improbable Monsieur Owen (15 juillet 1938)</li>
-<li>Ceux du Grand-Café (12 août 1938)</li>
-<li>Menaces de mort (8 mars au 12 avril 1942),</li>
-<li>Il s'agit d'une nouvelle reprise en volume en 1992</li>
-<li>Maigret revient… (octobre 1942), recueil de trois romans :</li>
-<li>Les Caves du Majestic (terminé en décembre 1939)</li>
-<li>La Maison du juge (terminé le 31 janvier 1940)</li>
-<li>Cécile est morte (terminé en décembre 1940)</li>
-<li>Signé Picpus (janvier 1944), recueil de trois romans :</li>
-<li>Signé Picpus (écrit en 1941)Félicie est là (écrit en mai 1942)L'Inspecteur Cadavre (achevé le 3 mars 1943)</li>
-<li>La Pipe de Maigret (juillet 1947), nouvelle</li>
-<li>Maigret se fâche (juillet 1947)</li>
-<li>Maigret à New York (juillet 1947)</li>
-<li>Maigret et l'Inspecteur malgracieux (octobre 1947), recueil de nouvelles :</li>
-<li>Le Témoignage de l'enfant de chœur (écrit le 28 avril 1946)</li>
-<li>Le Client le plus obstiné du monde (écrit le 2 mai 1946)</li>
-<li>Maigret et l'Inspecteur malgracieux (écrit le 5 mai 1946)</li>
-<li>On ne tue pas les pauvres types (écrit le 15 août 1946)</li>
-<li>Les Vacances de Maigret (juin 1948)</li>
-<li>Maigret et son mort (mai 1948)</li>
-<li>La Première Enquête de Maigret, 1913 (février 1949)</li>
-<li>Mon ami Maigret (juin 1949)</li>
-<li>Maigret chez le coroner (octobre 1949)</li>
-<li>Maigret et la Vieille Dame (février 1950)</li>
-<li>L'Amie de madame Maigret (mai 1950)</li>
-<li>Maigret et les Petits Cochons sans queue (août 1950), recueil de nouvelles, dont deux avec Maigret :</li>
-<li>L'Homme dans la rue (écrite en 1939)</li>
-<li>Vente à la bougie (écrite en 1939)</li>
-<li>Les Mémoires de Maigret (janvier 1951)</li>
-<li>Un Noël de Maigret, recueil de nouvelles, dont la nouvelle éponyme avec Maigret (écrite en mai 1950), nouvelle</li>
-<li>Maigret au « Picratt's » (avril 1951)</li>
-<li>Maigret en meublé (juillet 1951)</li>
-<li>Maigret et la Grande Perche (octobre 1951)</li>
-<li>Maigret, Lognon et les Gangsters (février 1952)</li>
-<li>Le Revolver de Maigret (septembre 1952)</li>
-<li>Maigret et l'Homme du banc (janvier 1953)</li>
-<li>Maigret a peur (juillet 1953)</li>
-<li>Maigret se trompe (novembre 1953)</li>
-<li>Maigret à l'école (mars 1954)</li>
-<li>Maigret et la Jeune Morte (juin 1954)</li>
-<li>Maigret chez le ministre (novembre 1954)</li>
-<li>Maigret et le Corps sans tête (juin 1955)</li>
-<li>Maigret tend un piège (octobre 1955)</li>
-<li>Un échec de Maigret (septembre 1956)</li>
-<li>Maigret s'amuse (mars 1957)</li>
-<li>Maigret voyage (décembre 1957)</li>
-<li>Les Scrupules de Maigret (juin 1958)</li>
-<li>Maigret et les Témoins récalcitrants (mars 1959)</li>
-<li>Une confidence de Maigret (septembre 1959)</li>
-<li>Maigret aux assises (mai 1960)</li>
-<li>Maigret et les Vieillards (novembre 1960)</li>
-<li>Maigret et le Voleur paresseux (novembre 1961)</li>
-<li>Maigret et les Braves Gens (avril 1962)</li>
-<li>Maigret et le Client du samedi (novembre 1962)</li>
-<li>Maigret et le Clochard (1963)</li>
-<li>La Colère de Maigret (1963)</li>
-<li>Maigret et le Fantôme (juillet 1964)</li>
-<li>Maigret se défend (novembre 1964)</li>
-<li>La Patience de Maigret (novembre 1965)</li>
-<li>Maigret et l'Affaire Nahour (décembre 1966)</li>
-<li>Le Voleur de Maigret (avril 1967)</li>
-<li>Maigret à Vichy (janvier 1968)</li>
-<li>Maigret hésite (1968)</li>
-<li>L'Ami d'enfance de Maigret (novembre 1968)</li>
-<li>Maigret et le Tueur (octobre 1969)</li>
-<li>Maigret et le Marchand de vin (février 1970)</li>
-<li>La Folle de Maigret (novembre 1970)</li>
-<li>Maigret et l'Homme tout seul (mai 1971)</li>
-<li>Maigret et l'Indicateur (octobre 1971)</li>
-<li>Maigret et Monsieur Charles (juillet 1972)</li>
+                    <li>Le Charretier de la Providence (mars 1931)</li>
+                    <li>Monsieur Gallet, décédé (février 1931)</li>
+                    <li>Le Pendu de Saint-Pholien (février 1931)</li>
+                    <li>La Tête d'un homme (septembre 1931)</li>
+                    <li>Le Chien jaune (avril 1931)</li>
+                    <li>La Nuit du carrefour (juin 1931)</li>
+                    <li>Un crime en Hollande (juillet 1931)</li>
+                    <li>Au rendez-vous des Terre-Neuvas (août 1931)</li>
+                    <li>La Danseuse du Gai-Moulin (novembre 1931)</li>
+                    <li>La Guinguette à deux sous (décembre 1931)</li>
+                    <li>Le Port des brumes (mai 1932)</li>
+                    <li>L'Ombre chinoise (janvier 1932)</li>
+                    <li>L'Affaire Saint-Fiacre (février 1932)</li>
+                    <li>Chez les Flamands (mars 1932)</li>
+                    <li>Le Fou de Bergerac (avril 1932)</li>
+                    <li>Liberty Bar (juillet 1932)</li>
+                    <li>L'Écluse no 1 (juin 1933)</li>
+                    <li>Maigret (mars 1934)</li>
+                    <li>Les Nouvelles Enquêtes de Maigret (mars 1944), recueil de nouvelles :</li>
+                    <li>La Péniche aux deux pendus (31 octobre et 7 novembre 1936)</li>
+                    <li>L'Affaire du Boulevard Beaumarchais (24 et 31 octobre 1936)</li>
+                    <li>La Fenêtre ouverte (7 et 14 novembre 1936)</li>
+                    <li>Monsieur Lundi (20 décembre 1936)</li>
+                    <li>Jeumont, 51 minutes d'arrêt (non prépubliée)</li>
+                    <li>Peine de mort (14 novembre 1936)</li>
+                    <li>Les Larmes de bougie (22 novembre 1936)</li>
+                    <li>Rue Pigalle (29 novembre et 6 décembre 1936)</li>
+                    <li>Une erreur de Maigret (3 janvier 1937)</li>
+                    <li>L'Amoureux de Madame Maigret (28 juillet 1939)</li>
+                    <li>La Vieille Dame de Bayeux (3 février 1939)</li>
+                    <li>L'Auberge aux noyés (11 novembre 1938)</li>
+                    <li>Stan le tueur (23 décembre 1938)</li>
+                    <li>L'Étoile du Nord (30 septembre 1938)</li>
+                    <li>Tempête sur la Manche (20 mai 1938)</li>
+                    <li>Mademoiselle Berthe et son amant (29 avril 1938)</li>
+                    <li>Le Notaire de Châteauneuf (17 juin 1938)</li>
+                    <li>L'Improbable Monsieur Owen (15 juillet 1938)</li>
+                    <li>Ceux du Grand-Café (12 août 1938)</li>
+                    <li>Menaces de mort (8 mars au 12 avril 1942),</li>
+                    <li>Il s'agit d'une nouvelle reprise en volume en 1992</li>
+                    <li>Maigret revient… (octobre 1942), recueil de trois romans :</li>
+                    <li>Les Caves du Majestic (terminé en décembre 1939)</li>
+                    <li>La Maison du juge (terminé le 31 janvier 1940)</li>
+                    <li>Cécile est morte (terminé en décembre 1940)</li>
+                    <li>Signé Picpus (janvier 1944), recueil de trois romans :</li>
+                    <li>Signé Picpus (écrit en 1941)Félicie est là (écrit en mai 1942)L'Inspecteur Cadavre (achevé le 3 mars 1943)</li>
+                    <li>La Pipe de Maigret (juillet 1947), nouvelle</li>
+                    <li>Maigret se fâche (juillet 1947)</li>
+                    <li>Maigret à New York (juillet 1947)</li>
+                    <li>Maigret et l'Inspecteur malgracieux (octobre 1947), recueil de nouvelles :</li>
+                    <li>Le Témoignage de l'enfant de chœur (écrit le 28 avril 1946)</li>
+                    <li>Le Client le plus obstiné du monde (écrit le 2 mai 1946)</li>
+                    <li>Maigret et l'Inspecteur malgracieux (écrit le 5 mai 1946)</li>
+                    <li>On ne tue pas les pauvres types (écrit le 15 août 1946)</li>
+                    <li>Les Vacances de Maigret (juin 1948)</li>
+                    <li>Maigret et son mort (mai 1948)</li>
+                    <li>La Première Enquête de Maigret, 1913 (février 1949)</li>
+                    <li>Mon ami Maigret (juin 1949)</li>
+                    <li>Maigret chez le coroner (octobre 1949)</li>
+                    <li>Maigret et la Vieille Dame (février 1950)</li>
+                    <li>L'Amie de madame Maigret (mai 1950)</li>
+                    <li>Maigret et les Petits Cochons sans queue (août 1950), recueil de nouvelles, dont deux avec Maigret :</li>
+                    <li>L'Homme dans la rue (écrite en 1939)</li>
+                    <li>Vente à la bougie (écrite en 1939)</li>
+                    <li>Les Mémoires de Maigret (janvier 1951)</li>
+                    <li>Un Noël de Maigret, recueil de nouvelles, dont la nouvelle éponyme avec Maigret (écrite en mai 1950), nouvelle</li>
+                    <li>Maigret au « Picratt's » (avril 1951)</li>
+                    <li>Maigret en meublé (juillet 1951)</li>
+                    <li>Maigret et la Grande Perche (octobre 1951)</li>
+                    <li>Maigret, Lognon et les Gangsters (février 1952)</li>
+                    <li>Le Revolver de Maigret (septembre 1952)</li>
+                    <li>Maigret et l'Homme du banc (janvier 1953)</li>
+                    <li>Maigret a peur (juillet 1953)</li>
+                    <li>Maigret se trompe (novembre 1953)</li>
+                    <li>Maigret à l'école (mars 1954)</li>
+                    <li>Maigret et la Jeune Morte (juin 1954)</li>
+                    <li>Maigret chez le ministre (novembre 1954)</li>
+                    <li>Maigret et le Corps sans tête (juin 1955)</li>
+                    <li>Maigret tend un piège (octobre 1955)</li>
+                    <li>Un échec de Maigret (septembre 1956)</li>
+                    <li>Maigret s'amuse (mars 1957)</li>
+                    <li>Maigret voyage (décembre 1957)</li>
+                    <li>Les Scrupules de Maigret (juin 1958)</li>
+                    <li>Maigret et les Témoins récalcitrants (mars 1959)</li>
+                    <li>Une confidence de Maigret (septembre 1959)</li>
+                    <li>Maigret aux assises (mai 1960)</li>
+                    <li>Maigret et les Vieillards (novembre 1960)</li>
+                    <li>Maigret et le Voleur paresseux (novembre 1961)</li>
+                    <li>Maigret et les Braves Gens (avril 1962)</li>
+                    <li>Maigret et le Client du samedi (novembre 1962)</li>
+                    <li>Maigret et le Clochard (1963)</li>
+                    <li>La Colère de Maigret (1963)</li>
+                    <li>Maigret et le Fantôme (juillet 1964)</li>
+                    <li>Maigret se défend (novembre 1964)</li>
+                    <li>La Patience de Maigret (novembre 1965)</li>
+                    <li>Maigret et l'Affaire Nahour (décembre 1966)</li>
+                    <li>Le Voleur de Maigret (avril 1967)</li>
+                    <li>Maigret à Vichy (janvier 1968)</li>
+                    <li>Maigret hésite (1968)</li>
+                    <li>L'Ami d'enfance de Maigret (novembre 1968)</li>
+                    <li>Maigret et le Tueur (octobre 1969)</li>
+                    <li>Maigret et le Marchand de vin (février 1970)</li>
+                    <li>La Folle de Maigret (novembre 1970)</li>
+                    <li>Maigret et l'Homme tout seul (mai 1971)</li>
+                    <li>Maigret et l'Indicateur (octobre 1971)</li>
+                    <li>Maigret et Monsieur Charles (juillet 1972)</li>
 
                 </ul>
 
@@ -140,7 +143,9 @@
 
             </section>
 
-            <a href="https://fr.wikipedia.org/wiki/Commissaire_Maigret" id="tribute-link" target="_blank">Le Wiki</a>
+            <section class="link">
+                <p>Si vous souhaitez tout savoir sur Jules Maigret je vous conseille d'aller lire le <a href="https://fr.wikipedia.org/wiki/Commissaire_Maigret" id="tribute-link" target="_blank">Wiki</a></p>
+            </section>
         </main>
 
     </div>
