--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/index_12.html
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/index_12.html
@@ -7,7 +7,8 @@
             <h1>Nisl suscipit <span class="accent-color">adipiscing bibendum</span> est ultricies integer quis auctor.</h1>
             <p>Netus et malesuada fames ac. <a href="#">Sed cras ornare arcu dui vivamus</a>. <strong>Elementum integer enim neque</strong> volutpat ac tincidunt vitae semper.</p>
             <p class="links">
-                <a class="button" href="#">contact me</a> <a class="button" href="#" >learn more about me</a>
+                <a class="button" href="#">contact me</a> <a href="#" class="
+                button">learn more about me</a>
             </p>
         </div>
     </body>
