--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/index_16.html
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/index_16.html
@@ -3,6 +3,22 @@
         <link rel="stylesheet" href="style_16.css">
     </head>
     <body>
+        <header>
+            <h1></h1>
+        </header>
         
+        <section class="section-one">
+            <h2></h2>
+            <p></p>
+            <a href="#" class="btn"></a>
+            <a href="#" class="btn"></a>
+        </section>
+        
+        <section class="section-two">
+            <h2></h2>
+            <p></p>
+            <a href="#" class="btn"></a>
+            <a href="#" class="btn"></a>
+        </section>      
     </body>
 </html>
