--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/index_24.html
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4a-css_fundamentals/index_24.html
@@ -12,13 +12,13 @@
         <section class="section-one">
             <h2 class="so">Section One Title.</h2>
             <img src="boardwalk.png" alt="" class="img">
-            <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
+            <p>Netus et malesuada fames ac. <a href="#">Sed cras ornare arcu</a> dui vivamus. <strong>Elementum integer enim neque</strong> volutpat ac tincidunt vitae semper.</p>
         </section>
 
         <section class="section-two">
             <h2 class="st">Section Two Title.</h2>
             <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
-            <p>Lorem <a href="#">ipsum dolor sit amet</a>, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
+            <p>Lorem <a href="#" class="st-link">ipsum dolor sit amet</a>, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt <strong>ut labore et dolore</strong>.</p>
             <a href="#" class="btn btn-orange">contact us</a>
             <a href="#" class="btn btn-white">more info</a>
         </section>
