--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4b-css-fundamentals_challenges/index_1.html
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4b-css-fundamentals_challenges/index_1.html
@@ -7,16 +7,18 @@
 </head>
 <body>
 
-<div class="container title-section">
-	<h1 class="title-text">The Lander.</h1>
-</div>
+
+	<div class="container title-section">
+		<h1 class="title-text">The Lander.</h1>
+	</div>
+
 
 <div class="container about-section">
 	<h2 class="section-title">About Us</h2>
-	<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat.</p>
+	<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <a href="#">sed do eiusmod
+	tempor incididunt</a> ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip <strong>ex ea commodo
+	consequat</strong>.</p>
 </div>
 
 <div class="container contact-section">
