--- a/fdcp-4-css_and_javascript_fundamentals/fdcp-4b-css-fundamentals_challenges/index_1.html
+++ b/fdcp-4-css_and_javascript_fundamentals/fdcp-4b-css-fundamentals_challenges/index_1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style_1.css">
+	<link rel="stylesheet" type="text/css" href="style_1s.css">
 	<title>CSS Challenge - Landing Page</title>
 </head>
 <body>
