--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/cdPbGrUr/index.html
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/cdPbGrUr/index.html
@@ -21,30 +21,46 @@
         </header>
 
         <main>
-            <div class="column-one">
+            <div class="main">
                 <section class="upfront">
-                    <div class="upfront-img">
+                    <div class="blog-img">
                         <img src="img/life.jpg" alt="">
+                        <p class="blog-date">July 23, 2019 | 3 comments</p>
                     </div>
-                    <div class="wrapper">
-                        <h2></h2>
-                        <p></p>
-                        <p></p>
+                    <div class="blog-container">
+                        <h2>Finding simplicity in life</h2>
+                        <p class="blog-text">Life can get complicated really quickly, but it doesn't have to be! There are many ways to simplify your life, a few of which we've explored in the past. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living.</p>
+                        <p class="blog-continue"><a href="#">continue reading</a></p>
                     </div>
                 </section>
 
                 <section class="recent">
-                    <div class="card">
-                        <img src="" alt="" class="card-img">
-                        <h2 class="card-h2"></h2>
-                        <p class="card-text"></p>
-                        <p></p>
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/food.jpg" alt="" class="blog-img">
+                            <p class="blog-date">July 19, 2019  |  3 comments</p>
+                        </div>
+                        <h2 class="blog-h2">Keeping cooking simple</h2>
+                        <p class="blog-text">Food is a very important part of everyone's life. If you want to be healthy, you have to eat healthy. One of the easiest ways to do that is to keep your cooking nice and simple. </p>
+                        <p class="blog-continue"><a href="#">continue reading</a></p>
                     </div>
                 </section>
 
             </div>
-            <div class="column-two">
+            <div class="sidebar">
+                <section class="sb-container">
+                    <h2>About me</h2>
+                    <img src="img/about-me.jpg" alt="" class="sb-img">
+                    <p>I find life better, and I'm happier, when things are nice and simple.</p>
+                </section>
 
+                <section class="sb-container">
+                    <h2>Recent posts</h2>
+                    <div class="recent-post">
+                        <img src="img/food.jpg" alt="" class="rp-img">
+                        <p>Keeping cooking simple</p>
+                    </div>
+                </section>
             </div>
         </main>
     </body>
