sttr project lsl

--- a/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/cdPbGrUr/index.html
+++ b/fdcp-5-responsive_design/fdcp-5a-starting_to_think_responsively/fdcp-5a-project-lsl/cdPbGrUr/index.html
@@ -40,9 +40,11 @@
                             <img src="img/food.jpg" alt="" class="blog-img">
                             <p class="blog-date">July 19, 2019  |  3 comments</p>
                         </div>
-                        <h2 class="blog-h2">Keeping cooking simple</h2>
-                        <p class="blog-text">Food is a very important part of everyone's life. If you want to be healthy, you have to eat healthy. One of the easiest ways to do that is to keep your cooking nice and simple. </p>
-                        <p class="blog-continue"><a href="#">continue reading</a></p>
+                        <div class="blog-container">
+                            <h2 class="blog-h2">Keeping cooking simple</h2>
+                            <p class="blog-text">Food is a very important part of everyone's life. If you want to be healthy, you have to eat healthy. One of the easiest ways to do that is to keep your cooking nice and simple. </p>
+                            <p class="blog-continue"><a href="#">continue reading</a></p>
+                        </div>
                     </div>
                 </section>
 
