--- a/fdcp-5-responsive_design/fdcp-5b-responsive-design-challenges/index_3.html
+++ b/fdcp-5-responsive_design/fdcp-5b-responsive-design-challenges/index_3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style_3.css">
+	<link rel="stylesheet" type="text/css" href="style_3s.css">
 	<title>CSS Challenge - Fix This Card</title>
 </head>
 <body>
