--- a/fdcp-5-responsive_design/fdcp-5b-responsive-design-challenges/index_9.html
+++ b/fdcp-5-responsive_design/fdcp-5b-responsive-design-challenges/index_9.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style_9.css">
+	<link rel="stylesheet" type="text/css" href="style_9s.css">
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<title>CSS Challenge - Navbar</title>
 </head>
