--- a/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/index.html
+++ b/fdcp-5-responsive_design/fdcp-5c-stepping-up-our-style/fdcp-5c-project-bbq/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
 
     <div class="header">
         <header>
-            <h1 class="header-title">Learn how to make the best BBQ ribs in town</h1>
+            <h1 class="header-title">Learn how to make<br><span class="header-bold">the best BBQ ribs</span><br> in town</h1>
             <p class="header-subtitle">Mouthwateringly delicious</p>
-            <p class="header-cta">Join us for this live webinar</p>
+            <h2 class="header-cta">Join us for this live webinar</h2>
         </header>
     </div>
 
@@ -22,12 +23,12 @@
             <h2 class="main-title">Become a BBQ master! </h2>
             <p class="main-subtitle">Register Today</p>
             <p class="main-text">BBQ isn't just standing in front of your grill with it on full blast and hoping for the best. It's an art! One way to speed up the process is to learn from the best. You can do just that by signing up for this free webinar!</p>
-            <form action="">
-                <input type="text" name="" id="">
-                <input type="email" name="" id="">
-                <input type="submit" value="">
+            <form class="form" action="">
+                <input class="form-fname" type="text" placeholder="first name" name="" id="">
+                <input class="form-email" type="email" placeholder="email" name="" id="">
+                <input class="form-btn" type="submit" value="Register">
             </form>
-            <p class="main-beware">We'll never share your information without your permission</p>
+            <p class="main-beware">We'll never share your information<br> without your permission</p>
         </main>
     </div>
 
