--- a/Pages/fcc-tribute/index.html
+++ b/Pages/fcc-tribute/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Maigret - Tribute Page</title>
 </head>
 <body>
     <div id="main">
+
         <header>
             <div class="hero">
                 <h1 id="title">Jules Maigret</h1>
@@ -15,10 +16,10 @@
             </div>
         </header>
     
-        <main>
+        <!-- <main> -->
 
             <div id="img-div">
-                <img src="simenon.jpg" alt="Bruno Cremer, le dernier commissaire Maigret" id="image">
+                <img src="simenon.jpg" alt="Simenon, le créateur" id="image">
                 <caption id="img-caption"><p class="caption">Georges Simenon, l'auteur de ses aventures</p></caption>   
             </div>
 
@@ -140,7 +141,8 @@
             <section class="link">
                 <p>Si vous souhaitez tout savoir sur Jules Maigret je vous conseille d'aller lire le <a href="https://fr.wikipedia.org/wiki/Commissaire_Maigret" id="tribute-link" target="_blank">Wiki</a></p>
             </section>
-        </main>
+
+        <!-- </main> -->
 
     </div>
 </body>
