--- a/fm-challenges/social-proof-section-master/index.html
+++ b/fm-challenges/social-proof-section-master/index.html
@@ -31,44 +31,44 @@
   <div class="section1">
     <h1>10,000+ of our users love our products.</h1>
 
-    We only provide great products combined with excellent customer service.
-    See what our satisfied customers are saying about our services.
+    <p>We only provide great products combined with excellent customer service.
+    See what our satisfied customers are saying about our services.</p>
   </div>
 
   <div class="section2">
     <img src="images/icon-star.svg" alt="">
-    Rated 5 Stars in Reviews
+    <p>Rated 5 Stars in Reviews</p>
     <img src="images/icon-star.svg" alt="">
-    Rated 5 Stars in Report Guru
+    <p>Rated 5 Stars in Report Guru</p>
     <img src="images/icon-star.svg" alt="">
-    Rated 5 Stars in BestTech
+    <p>Rated 5 Stars in BestTech</p>
   </div>
   
   <div class="section3">
 
     <div class="card">
       <img src="images/image-colton.jpg" alt="">
-      Colton Smith 
-      Verified Buyer
-      "We needed the same printed design as the one we had ordered a week prior.
+      <h2>Colton Smith</h2> 
+      <p>Verified Buyer</p>
+      <p>"We needed the same printed design as the one we had ordered a week prior.
       Not only did they find the original order, but we also received it in time.
-      Excellent!"
+      Excellent!"</p>
     </div>
 
     <div class="card">
       <img src="images/image-irene.jpg" alt="">
-      Irene Roberts 
-      Verified Buyer
-      "Customer service is always excellent and very quick turn around. Completely
-      delighted with the simplicity of the purchase and the speed of delivery."
+      <h2>Irene Roberts</h2> 
+      <p>Verified Buyer</p>
+      <p>"Customer service is always excellent and very quick turn around. Completely
+      delighted with the simplicity of the purchase and the speed of delivery."</p>
     </div>
 
     <div class="card">
       <img src="images/image-anne.jpg" alt="">  
-      Anne Wallace 
-      Verified Buyer
-      "Put an order with this company and can only praise them for the very high
-      standard. Will definitely use them again and recommend them to everyone!"
+      <h2>Anne Wallace</h2> 
+      <p>Verified Buyer</p>
+      <p>"Put an order with this company and can only praise them for the very high
+      standard. Will definitely use them again and recommend them to everyone!"</p>
     </div>
     
   </div>
