--- a/fm-challenges/social-proof-section-master/index.html
+++ b/fm-challenges/social-proof-section-master/index.html
@@ -12,6 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
 
     <title>Frontend Mentor | Social proof section</title>
 
@@ -28,8 +29,10 @@
   </head>
   <body>
   
+  <div class="sp-section">
+  
   <div class="section1">
-    <h1>10,000+ of our users love our products.</h1>
+    <h1 class="title">10,000+ of our users love our products.</h1>
 
     <p>We only provide great products combined with excellent customer service.
     See what our satisfied customers are saying about our services.</p>
@@ -78,6 +81,8 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
+  </div>
+
   </div>
   
   </body>
