fm social proof section challenge

--- a/fm-challenges/social-proof-section-master/index.html
+++ b/fm-challenges/social-proof-section-master/index.html
@@ -50,12 +50,20 @@
   <div class="section3">
 
     <div class="card">
-      <img class="card-img" src="images/image-colton.jpg" alt="">
-      <h2 class="card-title">Colton Smith</h2> 
-      <p class="card-state">Verified Buyer</p>
-      <p class="card-text">"We needed the same printed design as the one we had ordered a week prior.
-      Not only did they find the original order, but we also received it in time.
-      Excellent!"</p>
+      <div class="card-principal">
+        <div class="card-box-img">
+          <img class="card-img" src="images/image-colton.jpg" alt="">
+        </div>
+        <div class="card-box-title">
+          <h2 class="card-title">Colton Smith</h2> 
+          <p class="card-state">Verified Buyer</p>
+        </div>
+      </div>
+      <div class="card-secondary">
+        <p class="card-text">"We needed the same printed design as the one we had ordered a week prior.
+        Not only did they find the original order, but we also received it in time.
+        Excellent!"</p>
+      </div>
     </div>
 
     <div class="card">
