fm social proof section challenge

--- a/fm-challenges/social-proof-section-master/index.html
+++ b/fm-challenges/social-proof-section-master/index.html
@@ -39,12 +39,19 @@
   </div>
 
   <div class="section2">
-    <img src="images/icon-star.svg" alt="">
-    <p>Rated 5 Stars in Reviews</p>
-    <img src="images/icon-star.svg" alt="">
-    <p>Rated 5 Stars in Report Guru</p>
-    <img src="images/icon-star.svg" alt="">
-    <p>Rated 5 Stars in BestTech</p>
+    <div class="section2-block">
+      <img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt="">
+      <p class="star-text">Rated 5 Stars in Reviews</p>
+    </div>
+    <div class="section2-block">   
+      <img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt="">
+      <p class="star-text">Rated 5 Stars in Report Guru</p>
+    </div>
+    <div class="section2-block">    
+      <img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt="">
+      <p class="star-text">Rated 5 Stars in BestTech</p>
+    </div>
+  
   </div>
   
   <div class="section3">
@@ -57,7 +64,7 @@
         <div class="card-box-title">
           <h2 class="card-title">Colton Smith</h2> 
           <p class="card-state">Verified Buyer</p>
-        </div>
+          </div>
       </div>
       <div class="card-secondary">
         <p class="card-text">"We needed the same printed design as the one we had ordered a week prior.
@@ -67,19 +74,35 @@
     </div>
 
     <div class="card">
-      <img src="images/image-irene.jpg" alt="">
-      <h2>Irene Roberts</h2> 
-      <p>Verified Buyer</p>
-      <p>"Customer service is always excellent and very quick turn around. Completely
-      delighted with the simplicity of the purchase and the speed of delivery."</p>
+      <div class="card-principal">
+        <div class="card-box-img">
+          <img class="card-img" src="images/image-irene.jpg" alt="">
+        </div>
+        <div class="card-box-title">
+          <h2 class="card-title">Irene Roberts</h2> 
+          <p class="card-state">Verified Buyer</p>
+          </div>
+      </div>
+      <div class="card-secondary">
+        <p class="card-text">"Customer service is always excellent and very quick turn around. Completely
+          delighted with the simplicity of the purchase and the speed of delivery."</p>
+      </div>
     </div>
 
     <div class="card">
-      <img src="images/image-anne.jpg" alt="">  
-      <h2>Anne Wallace</h2> 
-      <p>Verified Buyer</p>
-      <p>"Put an order with this company and can only praise them for the very high
-      standard. Will definitely use them again and recommend them to everyone!"</p>
+      <div class="card-principal">
+        <div class="card-box-img">
+          <img class="card-img" src="images/image-anne.jpg" alt="">
+        </div>
+        <div class="card-box-title">
+          <h2 class="card-title">Anne Wallace</h2> 
+          <p class="card-state">Verified Buyer</p>
+          </div>
+      </div>
+      <div class="card-secondary">
+        <p class="card-text">"Put an order with this company and can only praise them for the very high
+          standard. Will definitely use them again and recommend them to everyone!"</p>
+      </div>
     </div>
     
   </div>
