fm social proof section challenge

--- a/fm-challenges/social-proof-section-master/index.html
+++ b/fm-challenges/social-proof-section-master/index.html
@@ -39,15 +39,15 @@
   </div>
 
   <div class="section2">
-    <div class="section2-block">
+    <div class="section2-block block1">
       <img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt="">
       <p class="star-text">Rated 5 Stars in Reviews</p>
     </div>
-    <div class="section2-block">   
+    <div class="section2-block block2">   
       <img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt="">
       <p class="star-text">Rated 5 Stars in Report Guru</p>
     </div>
-    <div class="section2-block">    
+    <div class="section2-block block3">    
       <img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt=""><img class="img-star" src="images/icon-star.svg" alt="">
       <p class="star-text">Rated 5 Stars in BestTech</p>
     </div>
@@ -56,7 +56,7 @@
   
   <div class="section3">
 
-    <div class="card">
+    <div class="card pos1">
       <div class="card-principal">
         <div class="card-box-img">
           <img class="card-img" src="images/image-colton.jpg" alt="">
@@ -73,7 +73,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card pos2">
       <div class="card-principal">
         <div class="card-box-img">
           <img class="card-img" src="images/image-irene.jpg" alt="">
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card pos3">
       <div class="card-principal">
         <div class="card-box-img">
           <img class="card-img" src="images/image-anne.jpg" alt="">
